--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@babel/core": "^7.12.0",
     "@babel/runtime": "^7.12.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.14",
+    "@types/react": "^16.9.52",
+    "@types/react-native": "^0.63.25",
+    "@types/react-test-renderer": "^16.9.3",
     "babel-jest": "^26.5.2",
     "eslint": "^7.11.0",
     "jest": "^26.5.3",
     "metro-react-native-babel-preset": "^0.63.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "typescript": "^4.0.3"
   },
   "jest": {
     "preset": "react-native"
